--- a/index.html
+++ b/index.html
@@ -18,59 +18,44 @@
     </header>
 
     <main>
-        <div class="image-slider">
-            <img src="image1.jpg" alt="Image 1">
-            <img src="image2.jpg" alt="Image 2">
-            <img src="image3.jpg" alt="Image 3">
+        <div class="slider">
+            <img src="image1.jpg" alt="Slider Image 1">
+            <img src="image2.jpg" alt="Slider Image 2">
         </div>
+
         <div class="categories">
             <div class="category">
-                <button onclick="location.href='wheelchairs.html'">
-                    <img src="category1.jpg" alt="Wheel Chairs">
-                </button>
+                <img src="wheelchairs.jpg" alt="Wheel Chairs">
                 <a href="wheelchairs.html">Wheel Chairs</a>
             </div>
             <div class="category">
-                <button onclick="location.href='orthopedic-support.html'">
-                    <img src="category2.jpg" alt="Orthopedic Support">
-                </button>
-                <a href="orthopedic-support.html">Orthopedic Support</a>
+                <img src="orthopedic.jpg" alt="Orthopedic Support">
+                <a href="orthopedic.html">Orthopedic Support</a>
             </div>
             <div class="category">
-                <button onclick="location.href='beds-and-bedding.html'">
-                    <img src="category3.jpg" alt="Beds and Bedding">
-                </button>
-                <a href="beds-and-bedding.html">Beds and Bedding</a>
+                <img src="beds.jpg" alt="Beds and Bedding">
+                <a href="beds.html">Beds and Bedding</a>
             </div>
             <div class="category">
-                <button onclick="location.href='medical-monitoring-devices.html'">
-                    <img src="category4.jpg" alt="Medical Monitoring Devices">
-                </button>
-                <a href="medical-monitoring-devices.html">Medical Monitoring Devices</a>
+                <img src="monitoring.jpg" alt="Medical Monitoring Devices">
+                <a href="monitoring.html">Medical Monitoring Devices</a>
             </div>
             <div class="category">
-                <button onclick="location.href='respiratory-aids.html'">
-                    <img src="category5.jpg" alt="Respiratory Aids">
-                </button>
-                <a href="respiratory-aids.html">Respiratory Aids</a>
+                <img src="respiratory.jpg" alt="Respiratory Aids">
+                <a href="respiratory.html">Respiratory Aids</a>
             </div>
         </div>
     </main>
 
     <footer>
-        <div class="footer-container">
-            <div class="address">
-                <h3>Address</h3>
-                <p>Institute Code: 01, Established in 1986</p>
-                <p>Bhilai House, Durg, Chhattisgarh - 491001</p>
-                <p>Email: bit@bitdurg.ac.in</p>
-                <p>Phone: 0788-2359297</p>
-                <p>Fax: +91 0788-2359263</p>
-            </div>
-            <div class="footer-bottom">
-                <p>Copyright © BIT DURG | Website Design & Maintain by Ayodhya Webosoft</p>
-                <p><a href="#">Privacy Policy</a> | <a href="#">Disclaimer</a> | <a href="#">Terms and Conditions</a> | <a href="#">Hyperlink Policy</a></p>
-            </div>
+        <div class="footer-top">
+            <h3>Contact Us</h3>
+            <p>123 Medical Supplies Lane, Health City</p>
+            <p>Email: contact@onlinestore.com</p>
+            <p>Phone: +1-234-567-8901</p>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Online Store. All rights reserved.</p>
         </div>
     </footer>
 
@@ -80,40 +65,40 @@
             <h2>Registration</h2>
             <form id="registration-form">
                 <label for="first-name">First Name <span class="required">*</span></label>
-                <input type="text" id="first-name" placeholder="First Name" required>
-                <span id="first-name-error" class="error-message"></span>
+                <input type="text" id="first-name">
+                <span class="error-message" id="first-name-error"></span>
 
                 <label for="last-name">Last Name</label>
-                <input type="text" id="last-name" placeholder="Last Name">
-                <span id="last-name-error" class="error-message"></span>
+                <input type="text" id="last-name">
 
                 <label for="user-id">User ID <span class="required">*</span></label>
-                <input type="text" id="user-id" placeholder="User ID" required>
-                <span id="user-id-error" class="error-message"></span>
+                <input type="text" id="user-id">
+                <span class="error-message" id="user-id-error"></span>
 
                 <label for="email">Email <span class="required">*</span></label>
-                <input type="email" id="email" placeholder="Email" required>
-                <span id="email-error" class="error-message"></span>
+                <input type="email" id="email">
+                <span class="error-message" id="email-error"></span>
 
                 <label for="password">Password <span class="required">*</span></label>
-                <input type="password" id="password" placeholder="Password" required>
-                <span id="password-error" class="error-message"></span>
+                <input type="password" id="password">
+                <span class="error-message" id="password-error"></span>
 
                 <label for="confirm-password">Confirm Password <span class="required">*</span></label>
-                <input type="password" id="confirm-password" placeholder="Confirm Password" required>
-                <span id="confirm-password-error" class="error-message"></span>
+                <input type="password" id="confirm-password">
+                <span class="error-message" id="confirm-password-error"></span>
 
                 <label for="contact">Contact Number <span class="required">*</span></label>
-                <select id="country-code" required>
+                <select id="country-code">
                     <option value="+1">+1 (USA)</option>
                     <option value="+91">+91 (India)</option>
-                    <!-- Add more country options as needed -->
+                    <option value="+44">+44 (UK)</option>
+                    <!-- Add more countries -->
                 </select>
-                <input type="tel" id="contact" placeholder="Contact Number" maxlength="10" required>
-                <span id="contact-error" class="error-message"></span>
+                <input type="text" id="contact">
+                <span class="error-message" id="contact-error"></span>
 
-                <div class="popup-buttons">
-                    <button type="button" onclick="saveData()">Register</button>
+                <div class="buttons">
+                    <button type="button" onclick="validateRegistration()">Register</button>
                     <button type="button" onclick="closePopup('registration-popup')">Back</button>
                     <button type="reset">Clear All</button>
                 </div>
@@ -126,13 +111,13 @@
         <div class="popup-content">
             <h2>Login</h2>
             <form id="login-form">
-                <input type="text" id="login-user-id" placeholder="User ID" required>
-                <input type="password" id="login-password" placeholder="Password" required>
-                <div class="popup-buttons">
-                    <button type="button" onclick="login()">Login</button>
-                    <button type="button" onclick="closePopup('login-popup')">Cancel</button>
-                </div>
-                <a href="#" onclick="openPopup('forgot-password-popup')">Forgot Password?</a>
+                <label for="login-user-id">User ID</label>
+                <input type="text" id="login-user-id">
+                <label for="login-password">Password</label>
+                <input type="password" id="login-password">
+                <button type="button" onclick="login()">Login</button>
+                <button type="button" onclick="closePopup('login-popup')">Cancel</button>
+                <a href="#" onclick="openPopup('forgot-password-popup'); closePopup('login-popup')">Forgot Password?</a>
             </form>
         </div>
     </div>
@@ -142,14 +127,14 @@
         <div class="popup-content">
             <h2>Forgot Password</h2>
             <form id="forgot-password-form">
-                <input type="email" id="forgot-email" placeholder="Enter your email" required>
+                <label for="forgot-email">Email</label>
+                <input type="email" id="forgot-email">
                 <button type="button" onclick="sendOTP()">Send OTP</button>
                 <p id="otp-message"></p>
-                <input type="text" id="otp" placeholder="Enter OTP" required>
-                <div class="popup-buttons">
-                    <button type="button" onclick="submitOTP()">Submit</button>
-                    <button type="button" onclick="closePopup('forgot-password-popup'); openPopup('login-popup')">Back</button>
-                </div>
+                <label for="otp">Enter OTP</label>
+                <input type="text" id="otp">
+                <button type="button" onclick="submitOTP()">Submit</button>
+                <button type="button" onclick="openPopup('login-popup'); closePopup('forgot-password-popup')">Back</button>
             </form>
         </div>
     </div>
