--- a/index.html
+++ b/index.html
@@ -88,13 +88,23 @@
                 <span class="error-message" id="confirm-password-error"></span>
 
                 <label for="contact">Contact Number <span class="required">*</span></label>
-                <select id="country-code">
-                    <option value="+1">+1 (USA)</option>
-                    <option value="+91">+91 (India)</option>
-                    <option value="+44">+44 (UK)</option>
-                    <!-- Add more countries -->
-                </select>
-                <input type="text" id="contact">
+                <div class="contact-field">
+                    <select id="country-code">
+                        <!-- List of country codes -->
+                        <option value="+1">+1 (USA)</option>
+                        <option value="+91">+91 (India)</option>
+                        <option value="+44">+44 (UK)</option>
+                        <option value="+61">+61 (Australia)</option>
+                        <option value="+81">+81 (Japan)</option>
+                        <option value="+86">+86 (China)</option>
+                        <option value="+49">+49 (Germany)</option>
+                        <option value="+33">+33 (France)</option>
+                        <option value="+7">+7 (Russia)</option>
+                        <option value="+34">+34 (Spain)</option>
+                        <!-- Add additional country codes as needed -->
+                    </select>
+                    <input type="text" id="contact">
+                </div>
                 <span class="error-message" id="contact-error"></span>
 
                 <div class="buttons">
