--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
                 <label for="contact">Contact Number <span class="required">*</span></label>
                 <div class="contact-field">
                     <select id="country-code">
-                        <!-- List of country codes -->
                         <option value="+1">+1 (USA)</option>
                         <option value="+91">+91 (India)</option>
                         <option value="+44">+44 (UK)</option>
@@ -101,7 +100,7 @@
                         <option value="+33">+33 (France)</option>
                         <option value="+7">+7 (Russia)</option>
                         <option value="+34">+34 (Spain)</option>
-                        <!-- Add additional country codes as needed -->
+                        <!-- Add more country codes if required -->
                     </select>
                     <input type="text" id="contact">
                 </div>
