--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="categories">
             <div class="category">
-                <img src="wheelchairs.jpg" alt="Wheel Chairs">
+                <img src="wheelchair.png" alt="Wheel Chairs">
                 <a href="wheelchairs.html">Wheel Chairs</a>
             </div>
             <div class="category">
