--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="categories">
             <div class="category">
-                <a href="wheelchairs.html"><img src="https://via.placeholder.com/150" alt="Wheel Chairs"></a>
+                <a href="wheelchairs.html"><img src="wheelchair.png" alt="Wheel Chairs"></a>
                 <a href="wheelchairs.html">Wheel Chairs</a>
             </div>
             <div class="category">
