--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MedSave</title>
     <link rel="stylesheet" href="styles.css">
-    <title>Online Store</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
-        <div class="logo">Online Store</div>
+        <div class="logo">MedSave</div>
         <div class="top-buttons">
             <button onclick="openPopup('login-popup')">Login</button>
-            <button onclick="openPopup('registration-popup')">Register</button>
+            <button onclick="openPopup('registration-popup')">Registration</button>
             <button onclick="openPopup('contact-popup')">Contact Us</button>
         </div>
     </header>
+
     <main>
         <div class="slider">
-            <img src="https://via.placeholder.com/1500x300" alt="Slider Image">
+            <img src="slider1.jpg" alt="Slider Image 1">
+            <img src="slider2.jpg" alt="Slider Image 2">
         </div>
+
         <div class="categories">
             <div class="category">
                 <a href="wheelchairs.html"><img src="wheelchair.png" alt="Wheel Chairs"></a>
@@ -42,9 +46,10 @@
             </div>
         </div>
     </main>
+
     <footer>
-        <div class="footer-top">Contact us at: support@onlinestore.com</div>
-        <div class="footer-bottom">© 2024 Online Store. All rights reserved.</div>
+        <div class="footer-top">© 2024 MedSave. All rights reserved.</div>
+        <div class="footer-bottom">Designed by MedSave Team</div>
     </footer>
 
     <!-- Login Popup -->
@@ -53,47 +58,50 @@
             <h2>Login</h2>
             <label for="login-user-id">User ID <span class="required">*</span></label>
             <input type="text" id="login-user-id">
-            <div class="error-message" id="login-user-id-error"></div>
+            <div id="login-user-id-error" class="error-message"></div>
             <label for="login-password">Password <span class="required">*</span></label>
             <input type="password" id="login-password">
-            <div class="error-message" id="login-password-error"></div>
-            <button onclick="validateLogin()">Login</button>
+            <div id="login-password-error" class="error-message"></div>
             <a onclick="openPopup('forgot-password-popup'); closePopup('login-popup')">Forgot Password?</a>
-            <button onclick="closePopup('login-popup')">Cancel</button>
+            <div class="buttons">
+                <button onclick="validateLogin()">Login</button>
+                <button onclick="closePopup('login-popup')">Cancel</button>
+            </div>
         </div>
     </div>
 
     <!-- Registration Popup -->
     <div id="registration-popup" class="popup">
         <div class="popup-content">
-            <h2>Register</h2>
+            <h2>Registration</h2>
             <label for="first-name">First Name <span class="required">*</span></label>
             <input type="text" id="first-name">
-            <div class="error-message" id="first-name-error"></div>
+            <div id="first-name-error" class="error-message"></div>
             <label for="last-name">Last Name</label>
             <input type="text" id="last-name">
             <label for="user-id">User ID <span class="required">*</span></label>
             <input type="text" id="user-id">
-            <div class="error-message" id="user-id-error"></div>
+            <div id="user-id-error" class="error-message"></div>
             <label for="email">Email <span class="required">*</span></label>
             <input type="email" id="email">
-            <div class="error-message" id="email-error"></div>
+            <div id="email-error" class="error-message"></div>
             <label for="password">Password <span class="required">*</span></label>
             <input type="password" id="password">
-            <div class="error-message" id="password-error"></div>
+            <div id="password-error" class="error-message"></div>
             <label for="confirm-password">Confirm Password <span class="required">*</span></label>
             <input type="password" id="confirm-password">
-            <div class="error-message" id="confirm-password-error"></div>
+            <div id="confirm-password-error" class="error-message"></div>
             <label for="contact-number">Contact Number <span class="required">*</span></label>
             <div class="contact-field">
                 <select id="country-code">
                     <option value="+1">+1 (USA)</option>
                     <option value="+91">+91 (India)</option>
-                    <!-- Add more country codes -->
+                    <option value="+44">+44 (UK)</option>
+                    <option value="+61">+61 (Australia)</option>
                 </select>
                 <input type="text" id="contact-number">
             </div>
-            <div class="error-message" id="contact-error"></div>
+            <div id="contact-error" class="error-message"></div>
             <div class="buttons">
                 <button onclick="validateRegistration()">Register</button>
                 <button onclick="clearRegistration()">Clear All</button>
@@ -108,14 +116,14 @@
             <h2>Forgot Password</h2>
             <label for="forgot-email">Email <span class="required">*</span></label>
             <input type="email" id="forgot-email">
-            <div class="error-message" id="forgot-email-error"></div>
+            <div id="forgot-email-error" class="error-message"></div>
             <button onclick="sendOTP()">Send OTP</button>
-            <a onclick="closePopup('forgot-password-popup'); openPopup('login-popup')">Back</a>
+            <p id="otp-message"></p>
             <label for="otp">Enter OTP</label>
             <input type="text" id="otp">
             <button onclick="submitOTP()">Submit</button>
+            <button onclick="closePopup('forgot-password-popup'); openPopup('login-popup')">Back</button>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
