--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
     <header>
         <div class="logo"><a href="index.html"><img src="logo.png" width="200" height="45" alt="logo"></a></div>
@@ -53,56 +55,95 @@
     </footer>
 
     <!-- Login Popup -->
+    <!-- Login Popup -->
     <div id="login-popup" class="popup">
         <div class="popup-content">
             <h2>Login</h2>
-            <label for="login-user-id">User ID <span class="required">*</span></label>
-            <input type="text" id="login-user-id">
-            <div id="login-user-id-error" class="error-message"></div>
-            <label for="login-password">Password <span class="required">*</span></label>
-            <input type="password" id="login-password">
-            <div id="login-password-error" class="error-message"></div>
-            <a onclick="openPopup('forgot-password-popup'); closePopup('login-popup')">Forgot Password?</a>
-            <div class="buttons">
-                <button onclick="validateLogin()">Login</button>
-                <button onclick="closePopup('login-popup')">Cancel</button>
-            </div>
+            <form id="login-form" method="POST" action="login.php"> <!-- Form submission to the PHP file -->
+                <label for="login-user-id">User ID <span class="required">*</span></label>
+                <input type="text" id="login-user-id" name="userId" required>
+                <div id="login-user-id-error" class="error-message"></div>
+
+                <label for="login-password">Password <span class="required">*</span></label>
+                <input type="password" id="login-password" name="password" required>
+                <div id="login-password-error" class="error-message"></div>
+
+                <a href="javascript:void(0);"
+                    onclick="openPopup('forgot-password-popup'); closePopup('login-popup')">Forgot Password?</a>
+
+                <!-- Footer with Register Link -->
+                <div class="login-footer">
+                    Don't have an account?<a href="javascript:void(0);"
+                        onclick="openPopup('registration-popup'); closePopup('login-popup')">
+                        Register</a>
+                </div>
+
+                <div class="buttons">
+                    <button type="submit">Login</button>
+                    <button type="button" onclick="closePopup('login-popup')">Cancel</button>
+                </div>
+            </form>
         </div>
     </div>
+
 
     <!-- Registration Popup -->
     <div id="registration-popup" class="popup">
         <div class="popup-content">
             <h2>Registration</h2>
-            <label for="first-name">First Name <span class="required">*</span></label>
-            <input type="text" id="first-name">
-            <div id="first-name-error" class="error-message"></div>
-            <label for="last-name">Last Name</label>
-            <input type="text" id="last-name">
-            <label for="user-id">User ID <span class="required">*</span></label>
-            <input type="text" id="user-id">
-            <div id="user-id-error" class="error-message"></div>
-            <label for="email">Email <span class="required">*</span></label>
-            <input type="email" id="email">
-            <div id="email-error" class="error-message"></div>
-            <label for="password">Password <span class="required">*</span></label>
-            <input type="password" id="password">
-            <div id="password-error" class="error-message"></div>
-            <label for="confirm-password">Confirm Password <span class="required">*</span></label>
-            <input type="password" id="confirm-password">
-            <div id="confirm-password-error" class="error-message"></div>
-            <label for="contact-number">Contact Number <span class="required">*</span></label>
-            <div class="contact-field">
-                <input type="text" id="contact-number">
+            <form action="register.php" method="POST" onsubmit="return validateRegistration()">
+
+                <input type="hidden" name="mode" value="register">
+
+                <label for="first-name">First Name <span class="required">*</span></label>
+                <input type="text" id="first-name" name="firstName" required aria-describedby="first-name-error">
+                <div id="first-name-error" class="error-message"></div>
+
+                <label for="last-name">Last Name</label>
+                <input type="text" id="last-name" name="lastName">
+
+                <label for="user-id">User ID <span class="required">*</span></label>
+                <input type="text" id="user-id" name="userId" required aria-describedby="user-id-error">
+                <div id="user-id-error" class="error-message"></div>
+
+                <label for="email">Email <span class="required">*</span></label>
+                <input type="email" id="email" name="email" required aria-describedby="email-error">
+                <div id="email-error" class="error-message"></div>
+
+                <label for="password">Password <span class="required">*</span></label>
+                <input type="password" id="password" name="password" required aria-describedby="password-error"
+                    pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
+                    title="Password must be at least 8 characters long and include uppercase, lowercase, number, and special character.">
+                <div id="password-error" class="error-message"></div>
+
+                <label for="confirm-password">Confirm Password <span class="required">*</span></label>
+                <input type="password" id="confirm-password" name="confirmPassword" required
+                    aria-describedby="confirm-password-error">
+                <div id="confirm-password-error" class="error-message"></div>
+
+                <label for="contact-number">Contact Number <span class="required">*</span></label>
+                <input type="number" id="contact-number" name="contact" required aria-describedby="contact-error"
+                    pattern="\d{10}" title="Contact number must be exactly 10 digits.">
+                <div id="contact-error" class="error-message"></div>
+
+                <label for="address">Address</label>
+                <input type="text" id="address" name="address">
+
+                <div class="buttons">
+                    <button type="submit">Register</button>
+                    <button type="reset">Clear All</button>
+                    <button type="button" onclick="closePopup('registration-popup')">Back</button>
+                </div>
+            </form>
+            <div class="registration-footer">
+                <p>Already have an account? <a href="javascript:void(0);"
+                        onclick="openPopup('login-popup'); closePopup('registration-popup')">Login</a></p>
             </div>
-            <div id="contact-error" class="error-message"></div>
-            <div class="buttons">
-                <button onclick="validateRegistration()">Register</button>
-                <button onclick="clearRegistration()">Clear All</button>
-                <button onclick="closePopup('registration-popup')">Back</button>
-            </div>
+
         </div>
     </div>
+
+
 
     <!-- Forgot Password Popup -->
     <div id="forgot-password-popup" class="popup">
@@ -120,4 +161,5 @@
         </div>
     </div>
 </body>
+
 </html>
