--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="top-buttons">
             <button onclick="openPopup('login-popup')">Login</button>
             <button onclick="openPopup('registration-popup')">Registration</button>
-            <button onclick="openPopup('contact-popup')">Contact Us</button>
+            <button onclick="scrollToSection('about-us')">Contact Us</button>
         </div>
     </header>
 
@@ -48,7 +48,17 @@
             </div>
         </div>
     </main>
-
+    <div id="about-us" class="about-section">
+    <h2>About Us</h2>
+    <p>
+        Welcome to MedSave, your trusted platform for buying, selling, and donating second-hand medical equipment. 
+        Our mission is to make healthcare more accessible and affordable by creating a community-driven marketplace 
+        that prioritizes donations. At MedSave, we empower individuals and organizations to extend the life of 
+        valuable medical equipment by passing it on to those in need. Whether you're upgrading your equipment or 
+        seeking affordable solutions, MedSave connects you with resources that make a difference. Together, we are 
+        building a compassionate network that fosters sustainability, accessibility, and hope in healthcare.
+    </p>
+</div>
     <footer>
         <div class="footer-top">© 2024 MedSave. All rights reserved.</div>
         <div class="footer-bottom">Designed by MedSave Team</div>
