--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </main>
-    <div id="about-us" class="about-section">
+   <div id="about-us" class="about-section styled-box">
     <h2>About Us</h2>
     <p>
         Welcome to MedSave, your trusted platform for buying, selling, and donating second-hand medical equipment. 
