--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         seeking affordable solutions, MedSave connects you with resources that make a difference. Together, we are 
         building a compassionate network that fosters sustainability, accessibility, and hope in healthcare.
     </p>
+    <h2>Contact Us</h2>
+    <h4>Phone No. +91 1122334455</h4>
+    <h4><a href="www.linkedin.com/in/mahim-shrivastava">LinkedIn (Mahim Shrivastava)</a></h4>
+    <h4><a href="https://www.linkedin.com/in/anjali-tiwari-a37b5b337/">LinkedIn (Anjali Tiwari)</a></h4>
 </div>
     <footer>
         <div class="footer-top">© 2024 MedSave. All rights reserved.</div>
