--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
 
                 <!-- Footer with Register Link -->
                 <div class="login-footer">
-                    Don't have an account?<a href="javascript:void(0);"
-                        onclick="openPopup('registration-popup'); closePopup('login-popup')">
-                        Register</a>
+                    Don't have an account? <a href="javascript:void(0);"
+                        onclick="openPopup('registration-popup'); closePopup('login-popup')">Register</a>
                 </div>
 
                 <div class="buttons">
