--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <main>
         <div class="slider">
-            <img src="slide1.png" alt="Slider Image 1">
-            <img src="slide.jpg" alt="Slider Image 2">
+            <img class="slide" src="slide1.png" alt="Slider Image 1">
+            <img class="slide" src="background.jpg" alt="Slider Image 2">
         </div>
 
         <div class="categories">
