--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
     <main>
         <div class="slider">
-            <img class="slide" src="slide1.png" alt="Slider Image 1">
-            <img class="slide" src="background.jpg" alt="Slider Image 2">
+            <img src="slide1.png" alt="Slider Image 1">
         </div>
         <br><br><br>
         <div class="categories">
